backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend #sets service name
  labels:
    app: backend #labels service type
spec:
  type: ClusterIP
  ports:
    -port: 80000
  selector:
    app: backend
